--- a/style.css
+++ b/style.css
@@ -36,15 +36,29 @@
     text-align: right;
 }
 
+.thumb{
+    margin-top: 50px;
+}
+
+
+.thumb img{
+    width: 100%;
+    height: 50px;
+    object-fit: cover;
+}
+
+
 
 /* BUTTONS */
 #prev{
     position: absolute;
     right: 100px;
     top: 65px;
+    z-index: 1;
 }
 
 #next{
     position: absolute;
     right: 100px;
-    bottom: 15px;}
+    bottom: 15px;
+}
